# typeFree

./: .gitignore  README.en.md  README.ja.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
frontend/: App.tsx  i18n.ts  index.html  index.tsx  package-lock.json  package.json  pnpm-lock.yaml  styles.css  tauriDesktop.ts  tsconfig.json  types.ts  utils.ts  vite-env.d.ts
frontend/components/: Block.tsx  MathPreview.tsx  MermaidPreview.tsx
frontend/electron/: i18n.mjs  main.mjs  preload.cjs
frontend/public/fonts/: custom-fonts.css
frontend/scripts/: electron-dev.mjs  electron-dist.mjs
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
