[package]
name = "typefree"
version = "0.2.4"
description = "TypeFree is an open-source, local-first Markdown editor with block-based WYSIWYG editing."
authors = ["Hill-1024 <3520363913@qq.com>"]
license = "MIT"
repository = "https://github.com/Hill-1024/typeFree"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "typefree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.0"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSDocument", "NSDocumentController", "NSPanel", "NSSavePanel", "NSResponder", "NSWindow", "NSWindowController"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSData", "NSError", "NSString", "NSURL"] }
